--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16784,4 +16784,8 @@ readers do not read off random characters that represent icons */
   text-decoration: underline;
 }
 
+.produits {
+  font-family: Poppins;
+}
+
 /*# sourceMappingURL=style.css.map */
