--- a/src/sass/header.sass
+++ b/src/sass/header.sass
@@ -1,8 +1,14 @@
-.mynav a 
-    list-style: inherit
-    font-family: Poppins
-.mybutt
-    margin-right: 100px
+body
+    font-family: "Poppins", sans-serif
+
+h1
+    font-size: 55px
+    transition: 1s
+a
+    margin-right: 40px
+    margin-top: 40px
+    font-size: 20px
+
 .cnx
     align-items: center
     background-color: #636663 
