--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -1,14 +1,36 @@
 
 .sect1
     background-color: #f3f3f3
-    font-family: Poppins
-.emporium
-    font-size: 10vh
+.my-media
+    @media screen and ( max-width:1025px )
+    
+    @media screen and ( max-width:769px   )
+    
+    @media screen and ( max-width: 569px  )
+        font-size: 20px
+#ban-empo
+    font-size: 50px
+    @media screen and ( max-width: 569px  )
+        font-size: 20px
+#ban-empo1
+    font-size: 90px
     font-weight: bold
-
+    @media screen and ( max-width:1025px )
+        font-size: 70px
+    
+    @media screen and ( max-width:769px   )
+        font-size: 50px
+    @media screen and ( max-width: 569px  )
+        font-size: 40px
+.monBtnSale
+    border: 1px solid red 
+    border-radius: 50px
+    padding: 15px
+#monSale
+    padding-right: 30px
+    padding-left: 30px
 .boite-service
-    font-family: Poppins
     justify-content: center
     justify-items: center
-.boite-service p 
-    text-decoration: underline
+
+
