--- a/src/sass/produits.sass
+++ b/src/sass/produits.sass
@@ -1,2 +1,104 @@
-.produits
-    font-family: Poppins
+.tacos 
+    display: flex
+    justify-content: center
+    align-items: center
+.image1
+    background-image: url(../../public/img/services/service-1.jpg)
+    background-size: cover
+    height: 150px
+    @media screen and ( max-width:1025px )
+        font-size: 70px
+    
+    @media screen and ( max-width:769px   )
+        font-size: 50px
+    @media screen and ( max-width: 569px  )
+        font-size: 20px 
+        margin-top: 10px
+.image2
+    background-image: url(../../public/img/services/service-2.jpg)
+    background-size: cover
+    height: 150px
+    @media screen and ( max-width:1025px )
+        font-size: 70px
+    
+    @media screen and ( max-width:769px   )
+        font-size: 50px
+    @media screen and ( max-width: 569px  )
+        font-size: 20px 
+        margin-top: 10px
+.image3
+    background-image: url(../../public/img/services/slider-3.jpg)
+    background-size: cover
+    height: 150px
+    @media screen and ( max-width:1025px )
+        font-size: 70px
+    
+    @media screen and ( max-width:769px   )
+        font-size: 50px
+    @media screen and ( max-width: 569px  )
+        font-size: 20px 
+        margin-top: 10px
+.avant 
+    width: 100%
+    position: relative
+    overflow: hidden
+.apres 
+    width: 100%
+    position: relative
+    overflow: hidden
+.my-images
+    margin-right: auto
+    margin-left: auto
+    width: 97%
+    transition: 1s
+    display: block
+.my-images:hover
+    transform: scale(1.1)
+
+.avant::before
+    content: "vieuw details"
+    display: flex
+    justify-content: center
+    align-items: center
+    position: absolute
+    bottom: -70px
+    width: 50%
+    height: 70px
+    background-color: black 
+    color: white
+    transition: 1s
+    z-index: 1
+    opacity: 0.2 
+
+.avant:hover::before
+    bottom: 0
+    left: 0
+    opacity: 1
+
+.apres::after
+    content: "add to cart"
+    display: flex
+    justify-content: center
+    align-items: center
+    position: absolute
+    bottom: -70px
+    width: 50%
+    height: 70px
+    background-color: red  
+    color: white
+    transition: 1s
+    z-index: 1
+    opacity: 0.2 
+    right: 0
+.apres:hover::after
+    bottom: 0
+    right: 0
+    opacity: 1
+.my-images
+    position: relative
+    
+
+
+
+
+    
