--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16970,4 +16970,15 @@ a {
   position: relative;
 }
 
+.discover {
+  background-image: url(../../public/img/cta-bg.jpg);
+  height: 600px;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.discover-text {
+  margin-top: 200px;
+}
+
 /*# sourceMappingURL=style.css.map */
