--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,7 +21,7 @@
   --bs-gray-dark: #343a40;
   --bs-primary: #0d6efd;
   --bs-secondary: #6c757d;
-  --bs-success: #198754;
+  --bs-success: #f4f4f4;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
   --bs-danger: #dc3545;
@@ -2008,15 +2008,15 @@ progress {
 }
 
 .table-success {
-  --bs-table-bg: #d1e7dd;
-  --bs-table-striped-bg: #c7dbd2;
+  --bs-table-bg: #fdfdfd;
+  --bs-table-striped-bg: #f0f0f0;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #bcd0c7;
+  --bs-table-active-bg: #e4e4e4;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #c1d6cc;
+  --bs-table-hover-bg: #eaeaea;
   --bs-table-hover-color: #000;
   color: #000;
-  border-color: #bcd0c7;
+  border-color: #e4e4e4;
 }
 
 .table-info {
@@ -2678,7 +2678,7 @@ textarea.form-control-lg {
   width: 100%;
   margin-top: 0.25rem;
   font-size: 0.875em;
-  color: #198754;
+  color: #f4f4f4;
 }
 
 .valid-tooltip {
@@ -2690,8 +2690,8 @@ textarea.form-control-lg {
   padding: 0.25rem 0.5rem;
   margin-top: 0.1rem;
   font-size: 0.875rem;
-  color: #fff;
-  background-color: rgba(25, 135, 84, 0.9);
+  color: #000;
+  background-color: rgba(244, 244, 244, 0.9);
   border-radius: 0.25rem;
 }
 
@@ -2703,16 +2703,16 @@ textarea.form-control-lg {
 }
 
 .was-validated .form-control:valid, .form-control.is-valid {
-  border-color: #198754;
+  border-color: #f4f4f4;
   padding-right: calc(1.5em + 0.75rem);
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23198754' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23f4f4f4' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
   background-position: right calc(0.375em + 0.1875rem) center;
   background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
 }
 .was-validated .form-control:valid:focus, .form-control.is-valid:focus {
-  border-color: #198754;
-  box-shadow: 0 0 0 0.25rem rgba(25, 135, 84, 0.25);
+  border-color: #f4f4f4;
+  box-shadow: 0 0 0 0.25rem rgba(244, 244, 244, 0.25);
 }
 
 .was-validated textarea.form-control:valid, textarea.form-control.is-valid {
@@ -2721,28 +2721,28 @@ textarea.form-control-lg {
 }
 
 .was-validated .form-select:valid, .form-select.is-valid {
-  border-color: #198754;
+  border-color: #f4f4f4;
   padding-right: 4.125rem;
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e"), url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23198754' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e"), url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23f4f4f4' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
   background-position: right 0.75rem center, center right 2.25rem;
   background-size: 16px 12px, calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
 }
 .was-validated .form-select:valid:focus, .form-select.is-valid:focus {
-  border-color: #198754;
-  box-shadow: 0 0 0 0.25rem rgba(25, 135, 84, 0.25);
+  border-color: #f4f4f4;
+  box-shadow: 0 0 0 0.25rem rgba(244, 244, 244, 0.25);
 }
 
 .was-validated .form-check-input:valid, .form-check-input.is-valid {
-  border-color: #198754;
+  border-color: #f4f4f4;
 }
 .was-validated .form-check-input:valid:checked, .form-check-input.is-valid:checked {
-  background-color: #198754;
+  background-color: #f4f4f4;
 }
 .was-validated .form-check-input:valid:focus, .form-check-input.is-valid:focus {
-  box-shadow: 0 0 0 0.25rem rgba(25, 135, 84, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(244, 244, 244, 0.25);
 }
 .was-validated .form-check-input:valid ~ .form-check-label, .form-check-input.is-valid ~ .form-check-label {
-  color: #198754;
+  color: #f4f4f4;
 }
 
 .form-check-inline .form-check-input ~ .valid-feedback {
@@ -2920,33 +2920,33 @@ textarea.form-control-lg {
 }
 
 .btn-success {
-  color: #fff;
-  background-color: #198754;
-  border-color: #198754;
+  color: #000;
+  background-color: #f4f4f4;
+  border-color: #f4f4f4;
 }
 .btn-success:hover {
-  color: #fff;
-  background-color: #157347;
-  border-color: #146c43;
+  color: #000;
+  background-color: #f6f6f6;
+  border-color: whitesmoke;
 }
 .btn-check:focus + .btn-success, .btn-success:focus {
-  color: #fff;
-  background-color: #157347;
-  border-color: #146c43;
-  box-shadow: 0 0 0 0.25rem rgba(60, 153, 110, 0.5);
+  color: #000;
+  background-color: #f6f6f6;
+  border-color: whitesmoke;
+  box-shadow: 0 0 0 0.25rem rgba(207, 207, 207, 0.5);
 }
 .btn-check:checked + .btn-success, .btn-check:active + .btn-success, .btn-success:active, .btn-success.active, .show > .btn-success.dropdown-toggle {
-  color: #fff;
-  background-color: #146c43;
-  border-color: #13653f;
+  color: #000;
+  background-color: #f6f6f6;
+  border-color: whitesmoke;
 }
 .btn-check:checked + .btn-success:focus, .btn-check:active + .btn-success:focus, .btn-success:active:focus, .btn-success.active:focus, .show > .btn-success.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.25rem rgba(60, 153, 110, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(207, 207, 207, 0.5);
 }
 .btn-success:disabled, .btn-success.disabled {
-  color: #fff;
-  background-color: #198754;
-  border-color: #198754;
+  color: #000;
+  background-color: #f4f4f4;
+  border-color: #f4f4f4;
 }
 
 .btn-info {
@@ -3150,27 +3150,27 @@ textarea.form-control-lg {
 }
 
 .btn-outline-success {
-  color: #198754;
-  border-color: #198754;
+  color: #f4f4f4;
+  border-color: #f4f4f4;
 }
 .btn-outline-success:hover {
-  color: #fff;
-  background-color: #198754;
-  border-color: #198754;
+  color: #000;
+  background-color: #f4f4f4;
+  border-color: #f4f4f4;
 }
 .btn-check:focus + .btn-outline-success, .btn-outline-success:focus {
-  box-shadow: 0 0 0 0.25rem rgba(25, 135, 84, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(244, 244, 244, 0.5);
 }
 .btn-check:checked + .btn-outline-success, .btn-check:active + .btn-outline-success, .btn-outline-success:active, .btn-outline-success.active, .btn-outline-success.dropdown-toggle.show {
-  color: #fff;
-  background-color: #198754;
-  border-color: #198754;
+  color: #000;
+  background-color: #f4f4f4;
+  border-color: #f4f4f4;
 }
 .btn-check:checked + .btn-outline-success:focus, .btn-check:active + .btn-outline-success:focus, .btn-outline-success:active:focus, .btn-outline-success.active:focus, .btn-outline-success.dropdown-toggle.show:focus {
-  box-shadow: 0 0 0 0.25rem rgba(25, 135, 84, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(244, 244, 244, 0.5);
 }
 .btn-outline-success:disabled, .btn-outline-success.disabled {
-  color: #198754;
+  color: #f4f4f4;
   background-color: transparent;
 }
 
@@ -4604,12 +4604,12 @@ textarea.form-control-lg {
 }
 
 .alert-success {
-  color: #0f5132;
-  background-color: #d1e7dd;
-  border-color: #badbcc;
+  color: #626262;
+  background-color: #fdfdfd;
+  border-color: #fcfcfc;
 }
 .alert-success .alert-link {
-  color: #0c4128;
+  color: #4e4e4e;
 }
 
 .alert-info {
@@ -4943,17 +4943,17 @@ textarea.form-control-lg {
 }
 
 .list-group-item-success {
-  color: #0f5132;
-  background-color: #d1e7dd;
+  color: #626262;
+  background-color: #fdfdfd;
 }
 .list-group-item-success.list-group-item-action:hover, .list-group-item-success.list-group-item-action:focus {
-  color: #0f5132;
-  background-color: #bcd0c7;
+  color: #626262;
+  background-color: #e4e4e4;
 }
 .list-group-item-success.list-group-item-action.active {
   color: #fff;
-  background-color: #0f5132;
-  border-color: #0f5132;
+  background-color: #626262;
+  border-color: #626262;
 }
 
 .list-group-item-info {
@@ -5912,10 +5912,10 @@ textarea.form-control-lg {
 }
 
 .link-success {
-  color: #198754;
+  color: #f4f4f4;
 }
 .link-success:hover, .link-success:focus {
-  color: #146c43;
+  color: #f6f6f6;
 }
 
 .link-info {
@@ -6309,7 +6309,7 @@ textarea.form-control-lg {
 }
 
 .border-success {
-  border-color: #198754 !important;
+  border-color: #f4f4f4 !important;
 }
 
 .border-info {
@@ -7095,7 +7095,7 @@ textarea.form-control-lg {
 }
 
 .text-success {
-  color: #198754 !important;
+  color: #f4f4f4 !important;
 }
 
 .text-info {
@@ -7167,7 +7167,7 @@ textarea.form-control-lg {
 }
 
 .bg-success {
-  background-color: #198754 !important;
+  background-color: #f4f4f4 !important;
 }
 
 .bg-info {
@@ -16770,6 +16770,28 @@ a {
   border-radius: 5px;
 }
 
+#cmonterrein {
+  height: 20px;
+  width: 8%;
+}
+
+#btnjour:hover {
+  background-color: #f4f4f4;
+}
+
+.shipments {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.mon10bal {
+  padding: 40px;
+}
+
+.okay_Mahad {
+  background-color: #221c1c;
+}
+
 .sect1 {
   background-color: #f3f3f3;
 }
@@ -16979,6 +17001,209 @@ a {
 
 .discover-text {
   margin-top: 200px;
+}
+
+#hotFashion .myCarousel {
+  overflow-x: hidden;
+  position: relative;
+  margin: 0 auto;
+  width: 60%;
+  height: 500px;
+}
+#hotFashion .myCarousel .divIndicators {
+  bottom: 20px;
+  width: 100px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 999;
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#hotFashion .myCarousel .indic {
+  height: 15px;
+  width: 15px;
+  border: solid 1px black;
+  border-radius: 50%;
+}
+#hotFashion .myCarousel .myIndicator {
+  cursor: pointer;
+}
+#hotFashion .myCarousel .myIndicator1 {
+  cursor: pointer;
+}
+#hotFashion .myCarousel .myIndicator2 {
+  cursor: pointer;
+}
+#hotFashion .myCarousel .myIndicator3 {
+  cursor: pointer;
+}
+#hotFashion .myCarousel .myIndicator4 {
+  cursor: pointer;
+  display: none;
+}
+#hotFashion .myCarousel .myIndicator5 {
+  cursor: pointer;
+  display: none;
+}
+#hotFashion .myCarousel .myIndicator6 {
+  cursor: pointer;
+  display: none;
+}
+#hotFashion .myCarousel .img {
+  left: 3%;
+  top: 20%;
+  font-weight: 700;
+  width: 21%;
+}
+#hotFashion .myCarousel .img0 {
+  position: absolute;
+  height: 250px;
+  transition: 1s;
+}
+#hotFashion .myCarousel .img2 {
+  position: absolute;
+  transform: translateX(120%);
+  height: 250px;
+  transition: 1s;
+}
+#hotFashion .myCarousel .img3 {
+  position: absolute;
+  transform: translateX(240%);
+  height: 250px;
+  transition: 1s;
+}
+#hotFashion .myCarousel .img4 {
+  position: absolute;
+  transform: translateX(360%);
+  height: 250px;
+  transition: 1s;
+}
+#hotFashion .myCarousel .img5 {
+  position: absolute;
+  transform: translateX(500%);
+  height: 250px;
+  transition: 1s;
+}
+#hotFashion .myCarousel .img6 {
+  position: absolute;
+  transform: translateX(620%);
+  height: 250px;
+  transition: 1s;
+}
+#hotFashion .myCarousel .img7 {
+  position: absolute;
+  transform: translateX(750%);
+  height: 250px;
+  transition: 1s;
+}
+
+@media screen and (max-width: 992px) {
+  #hotFashion .myCarousel {
+    overflow-x: hidden;
+    position: relative;
+    margin: 0 auto;
+    width: 100%;
+    height: 500px;
+  }
+}
+@media screen and (max-width: 600px) {
+  #hotFashion .myCarousel {
+    overflow-x: hidden;
+    position: relative;
+    margin: 0 auto;
+    width: 100%;
+    height: 500px;
+  }
+  #hotFashion .myCarousel .divIndicators {
+    bottom: 20px;
+    width: 75%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 999;
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  #hotFashion .myCarousel .indic {
+    height: 15px;
+    width: 15px;
+    border: solid 1px black;
+    border-radius: 50%;
+  }
+  #hotFashion .myCarousel .myIndicator {
+    cursor: pointer;
+  }
+  #hotFashion .myCarousel .myIndicator1 {
+    cursor: pointer;
+  }
+  #hotFashion .myCarousel .myIndicator2 {
+    cursor: pointer;
+  }
+  #hotFashion .myCarousel .myIndicator3 {
+    cursor: pointer;
+  }
+  #hotFashion .myCarousel .myIndicator4 {
+    cursor: pointer;
+    display: unset;
+  }
+  #hotFashion .myCarousel .myIndicator5 {
+    cursor: pointer;
+    display: unset;
+  }
+  #hotFashion .myCarousel .myIndicator6 {
+    cursor: pointer;
+    display: unset;
+  }
+  #hotFashion .myCarousel .img {
+    left: 0%;
+    top: 10%;
+    font-weight: 700;
+    width: 100%;
+  }
+  #hotFashion .myCarousel .img0 {
+    position: absolute;
+    height: 250px;
+    transition: 1s;
+  }
+  #hotFashion .myCarousel .img2 {
+    position: absolute;
+    transform: translateX(120%);
+    height: 250px;
+    transition: 1s;
+  }
+  #hotFashion .myCarousel .img3 {
+    position: absolute;
+    transform: translateX(240%);
+    height: 250px;
+    transition: 1s;
+  }
+  #hotFashion .myCarousel .img4 {
+    position: absolute;
+    transform: translateX(360%);
+    height: 250px;
+    transition: 1s;
+  }
+  #hotFashion .myCarousel .img5 {
+    position: absolute;
+    transform: translateX(500%);
+    height: 250px;
+    transition: 1s;
+  }
+  #hotFashion .myCarousel .img6 {
+    position: absolute;
+    transform: translateX(620%);
+    height: 250px;
+    transition: 1s;
+  }
+  #hotFashion .myCarousel .img7 {
+    position: absolute;
+    transform: translateX(750%);
+    height: 250px;
+    transition: 1s;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
