--- a/src/sass/header.sass
+++ b/src/sass/header.sass
@@ -19,6 +19,15 @@ a
     width: 8%
 #btnjour:hover
     background-color: $success
+.hide-content
+    visibility: hidden
+
+h5
+    cursor: pointer
+ 
+@media  ( max-width: 376px )
+    .gauche
+        width: 100% !important
     
 
 
